add time to find an internet connection

--- a/html/pi.html
+++ b/html/pi.html
@@ -23,7 +23,8 @@
     connection: 'Nous connectons le pi Heptaward a internet...',
     connected: 'Le pi Heptaward est maintenant connecté à Internet!',
     errorConnection: 'Il y a eu une erreur au moment de connecter le pi a internet, veuillez rééssayer',
-    errorSerial: 'Erreur, veuillez nous contacter, error code: 3472'
+    errorSerial: 'Erreur, veuillez nous contacter, error code: 3472',
+    lookingforInternet: 'Nous cherchons une connection internet...'
   }
   const messageElement = document.getElementById('message');
   var socket = io();
