--- a/html/pi.html
+++ b/html/pi.html
@@ -18,13 +18,13 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
   const message = {
-    waitingParing: 'Connectez-vous sur app.heptaward.com, ajoutez un nouveau pi Heptaward dans la partie TV management',
+    waitingPairing: 'Connectez-vous sur app.heptaward.com, ajoutez un nouveau pi Heptaward dans la partie TV management',
     paired: 'Vous êtes maintenant connecté au pi Heptaward!',
     connection: 'Nous connectons le pi Heptaward a internet...',
     connected: 'Le pi Heptaward est maintenant connecté à Internet!',
     errorConnection: 'Il y a eu une erreur au moment de connecter le pi a internet, veuillez rééssayer',
     errorSerial: 'Erreur, veuillez nous contacter, error code: 3472',
-    lookingforInternet: 'Nous cherchons une connection internet...'
+    lookingForInternet: 'Nous cherchons une connection internet...'
   }
   const messageElement = document.getElementById('message');
   var socket = io();
