--- a/html/network.html
+++ b/html/network.html
@@ -2,40 +2,21 @@
 <html>
 
 <head>
-  <style>
-    .password {
-      display: none;
-    }
-
-    img {
-      width: 15px;
-    }
-
-    #error {
-      color: red;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/network.css">
 </head>
 
 <body>
-
-  <h2>Connect your Raspberry Pi to internet</h2>
-
-  <form>
-    SSID:<br>
+  <form id="form">
+    <div class="select-title"> SSID </div>
     <select id="ssid" onchange="displayPassword(this)"></select>
-    <img src="./reload.png" onclick="initialize()">
-    <br>
-    <div id="passwordDiv" class="password">
-      PASSWORD<br>
-      <input id="password" type="password" name="lastname">
+    <div id="passwordDiv" class="password-container">
+      <div class="password-title">PASSWORD </div>
+      <input id="password" class="password-input" type="text" name="lastname">
     </div>
-    <br><br>
-    <input type="submit" value="Submit" onclick="sendCredentials()">
+    <input class="submit" type="submit" value="Submit" onclick="sendCredentials()">
   </form>
-  <p id="error"></p>
-  <p id="message">If you click the "Submit" button, we will try to connect the raspberry pi with these credentials</p>
-
+  <div id="error"> </div>
+  <div id="message" class="network-message"> </div>
 </body>
 
 </html>
@@ -53,8 +34,6 @@ const postCredentials = async (networkParse) => {
   const fetchResult = fetch('http://172.24.1.1:3000/credentials', myInit)
   const response = await fetchResult;
   const responseJSON = await response.json();
-  const message = document.getElementById("message");
-  message.innerHTML = responseJSON.message
 }
 
 const sendCredentials = () => {
@@ -62,13 +41,21 @@ const sendCredentials = () => {
   const password = document.getElementById("password");
   const ssid = document.getElementById("ssid");
   const error = document.getElementById("error");
-  const networkParse = JSON.parse(ssid.value);
-  if(networkParse && networkParse.needPassword && !password.value) {
-    error.innerHTML = 'Error, need password';
-  } else {
-    error.innerHTML = '';
-  }
-  networkParse.password = password.value;
+  error.innerHTML = 'Error, need password';
+  // const networkParse = JSON.parse(ssid.value);
+  // if(networkParse && networkParse.needPassword && !password.value) {
+  //   error.innerHTML = 'Error, need password';
+  // } else {
+  //   error.innerHTML = '';
+  // }
+  // networkParse.password = password.value;
+  const message = document.getElementById("message");
+  const form = document.getElementById("form");
+  error.style.display = 'none';
+  form.style.display = 'none';
+  setTimeout(() => {
+    message.innerHTML = 'Please go to the next step';
+  }, 1800)
   postCredentials(networkParse)
 }
 
@@ -77,7 +64,7 @@ const displayPassword = ({ value }) => {
   var passwordDiv = document.getElementById("passwordDiv");
   const password = document.getElementById("password");
   password.value = null;
-  passwordDiv.style.display = !network.needPassword ? 'none' : 'contents';
+  passwordDiv.style.display = !network.needPassword ? 'none' : 'flex';
 }
 
 const assignNetworks = (networks) => {
