add info for user

--- a/html/pi.html
+++ b/html/pi.html
@@ -24,7 +24,10 @@
     connected: 'Le pi Heptaward est maintenant connecté à Internet!',
     errorConnection: 'Il y a eu une erreur au moment de connecter le pi a internet, veuillez rééssayer',
     errorSerial: 'Erreur, veuillez nous contacter, error code: 3472',
-    lookingForInternet: 'Nous cherchons une connection internet...'
+    lookingForInternet: 'Nous cherchons une connection internet... 1/4',
+    lookingForInternet2: 'Nous cherchons une connection internet... 2/4',
+    lookingForInternet3: 'Nous cherchons une connection internet... 3/4',
+    lookingForInternet4: 'Nous cherchons une connection internet... 4/4',
   }
   const messageElement = document.getElementById('message');
   var socket = io();
