--- a/html/pi.html
+++ b/html/pi.html
@@ -21,13 +21,19 @@
     waitingPairing: 'Connectez-vous sur app.heptaward.com, ajoutez un nouveau pi Heptaward dans la partie TV management',
     paired: 'Vous êtes maintenant connecté au pi Heptaward!',
     connection: 'Nous connectons le pi Heptaward a internet...',
+    almostConnected: 'Vérification des derniers réglages, dans quelques secondes tout sera prêt!',
     connected: 'Le pi Heptaward est maintenant connecté à Internet!',
     errorConnection: 'Il y a eu une erreur au moment de connecter le pi a internet, veuillez rééssayer',
-    errorSerial: 'Erreur, veuillez nous contacter, error code: 3472',
+    errorSerial: 'Oh non! une petite erreur est survenue, veuillez nous contacter, error code: Mayday Mayday',
     lookingForInternet: 'Nous cherchons une connection internet... 1/4',
     lookingForInternet2: 'Nous cherchons une connection internet... 2/4',
     lookingForInternet3: 'Nous cherchons une connection internet... 3/4',
     lookingForInternet4: 'Nous cherchons une connection internet... 4/4',
+    checkEthernet: 'Vérification Ethernet',
+    piUpToDate: 'Le player H7 est à jour!',
+    lookingForUpdate: 'Recherche de mises à jour',
+    isUpdating: 'Nous mettons à jour votre player H7',
+    isRebooting: 'Le player va redémarrer',
   }
   const messageElement = document.getElementById('message');
   var socket = io();
